# Braco_robotico-Pick_and_Place

./: CMakeCache.txt  README.md  links.md
bibliotecas_servo_motores/: .servo_motors.c.swp  .servo_motors.cpp.swp  servo_motors.cpp  servo_motors.h
braco_robotico/: .demo.cpp.swo  .demo.cpp.swp  .robot.cpp.swo  .robot.cpp.swp  .robot.h.swo  .robot.h.swp  demo.cpp  robot.cpp  robot.h  servod  servod.c  teste  teste2
braco_robotico/calibracao/: Makefile  calibracao  calibracao.c
braco_robotico/inverse_kinematics/: .inverse_kinematics.c.swp  .inverse_knematics.c.swp  arm.py  inverse_kinematics  inverse_kinematics.c  inverse_knematics  inverse_knematics.c
braco_robotico/inverse_knematics/: .inverse_knematics.c.swp  Makefile  inverse_knematics  inverse_knematics.c
braco_robotico/inverse_knematics/python_test/: invkin.py
braco_robotico/pigpio/: servo  servo.cpp
imgproc/: .CMakeLists.txt.swp  .motion.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  colorsep.cpp  hues.cpp  inv_kinematics.c  inv_kinematics.h  motion.cpp
imgproc/include/: .inv_kinematics.h.swo  .inv_kinematics.h.swp  buttons.h  inv_kinematics.h
imgproc/inv_kinematics/: CMakeLists.txt  inv_kinematics.c  inv_kinematics.h
imgproc/src/: .inv_kinematics.c.swp  .motion.cpp.swp  buttons.c  inv_kinematics.c  motion.cpp
inverse_kinematics/: Makefile  inverse_kinematics  inverse_kinematics.c
src/: buttons.c  manual.c
testUX/: .buttons.c.swp  .buttons.h.swp  .test.c.swp  Makefile  buttons.c  buttons.h  test.c  teste
